required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------
- Ensure the class is not marked BeforeFieldInit causing memory corruption with C#/CLR4 (#3438)

- Fixed MSSQL2008 driver returning invalid extent (#3498)

- Added coordinate scaling to shpxy tag via parameters scale, scale_x or scale_y.

- Fix computation of shape bounds when the first line contains no points
  (#3119)(fixes #3383)

- Allow map relative specification in the PROJ_LIB config item (#3094)

- Try to report reprojection errors in SLD Filter evaluation (#3495)

- Disabled some insecure (and potentially exploitable) mapserv command-line
  debug arguments (#3485). The --enable-cgi-cl-debug-args configure switch
  can be used to re-enable them for devs who really cannot get away without
  them and who understand the potential security risk (not recommended for 
  production servers or those who don't understand the security implications).

- Fixed segmentation fault in ogr driver when shape type is null 

- Fixed synchronized MS_UNITS and inchesPerUnits array (#3173) 

- Fixed possible buffer overflow in msTmpFile() (#3484)

- Fixed Using STYLEITEM AUTO, loadExpression fails when the label text contains a double quote (#3481)

- PHP/MapScript: Expose getGeomTransform/setGeomTransform instead of exposing the private vars for rfc48 (#2825) 

- PHP/MapScript: Fixed updateFromString functions to resolve symbol names (#3273)

- PHP/MapScript: ability to use the php clone keyword (#3472)

- Modified mapserver units enum order to fix some problems with external softwares (#3173)

- Fixed configure does not detect libGD version dependencies (#3478)
