@@ -13,6 +13,8 @@ For a complete change history, please see the Subversion log comments.
 
 Current Version (SVN trunk):
 ----------------------------
+- Avoid warnings about ms_cvsid being unused with gcc. 
+
 - Ensure the class is not marked BeforeFieldInit causing memory corruption with C#/CLR4 (#3438)
 
 - Fixed MSSQL2008 driver returning invalid extent (#3498)
